# ciel

./: .flake8  .gitignore  Ciel.sln  Ciel.slnx  license.md  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: python-package.yml
Ciel.Api/: Ciel.Api.csproj  Ciel.cs
Ciel.Birb/: Server.cs
Ciel.Birb.Extra/: Ciel.Birb.Extra.csproj
Ciel.Birb.Tests/: Ciel.Birb.Tests.csproj
Ciel.Birb/Handler/: HandlerFuncWrapper.cs  IHandler.cs
Ciel.Birb/Http/: Header.cs  Protocol.cs
Ciel.Birb/Request/: Body.cs  Request.cs
Ciel.Birb/Response/: ResponseStreamAdaptor.cs  ResponseWriter.cs
Ciel.Runtime/: Ciel.Runtime.csproj  ModuleRegistry.cs  Modules.cs  Runtime.cs
app/: __init__.py
app/http/: __init__.py
app/http/controllers/: auth.py
app/http/route/: web.py
config/: app.py
src/Ciel/: Ciel.cs  Ciel.csproj
src/Ciel.Api/: Ciel.Api.csproj
src/Ciel.Birb/: ChunkedBody.cs  Ciel.Birb.csproj  Configs.cs  ContentBody.cs  Glob.cs  HandlerAsync.cs  Method.cs  Request.cs  ResponseWriter.cs  ResponseWriterImpl.cs  RoutePattern.cs  RouteSegment.cs  RouteSegments.cs  Router.cs  Server.cs  Static.cs  Status.cs  Version.cs
src/Ciel.Birb.Extra/: FileServer.cs
src/Ciel.Birb.Tests/: Ciel.Birb.Tests.csproj  PathPatternTests.cs
src/Ciel.Birb/Http/: Headers.cs
src/Ciel.Birb/Request/: BodyStreamAdaptor.cs
src/Ciel.Birb/Utils/: Extensions.cs
src/Ciel.Breeze/: Lexer.cs
src/Ciel.Breeze.Tests/: Ciel.Breeze.Tests.csproj  LexerTests.cs
src/Ciel.BuildTasks/: Ciel.BuildTasks.csproj  Class1.cs
src/Ciel.Runtime/: Ciel.Runtime.csproj  Runtime.cs
(+3 files in other folders)
