[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ciel"
version = "0.0.1"
authors = [
  { name="Mtilde", email="contact@mtilde.fr" },
]
description = "My python web framework"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "LGPL-3.0"
license-files = ["LICENSE.md", "LICENSE.LESSER.md"]

[project.urls]
Homepage = "https://github.com/ciel-framework/ciel"
Issues = "https://github.com/ciel-framework/ciel/issues"

[project.optional-dependencies]
dev = [
    "mypy",
    "flake8",
    "build",
]

[tool.mypy]
python_version = "3.11"
strict = true


